...
                            .accessibilityIdentifier("img_account_detail_create_note_icon")
                    }
                    .frame(width: 40, height: 30, alignment: .bottomLeading)
                    .padding(.bottom, 10)
                    
                }
                .accessibilityIdentifier("btn_account_detail_add_note")
            }
            if acccountDetailScreenViewModelObject.isNoteListLoading {
                ProgressView()
                    .tint(Color(Asset.loginButtonSecondary.name))
            } else if acccountDetailScreenViewModelObject.noteData.note_ids.isEmpty {
                VStack(spacing: 0) {
                    HStack {
                        Spacer()
                        Text("Add notes and sync with your salesforce account")
                            .font(.nunitoRegular(size: 12))
                            .foregroundColor(Color(Asset.textPrimary.name))
                            .padding(EdgeInsets(top: 12, leading: 14, bottom: 12, trailing: 14))
                            .accessibilityIdentifier("txt_account_detail_add_note_text")
                        
                        Spacer()
                    }
                    .background(
                        RoundedRectangle(cornerRadius: 4)
                            .strokeBorder(style: StrokeStyle(lineWidth: 2, dash: [2, 5], dashPhase: 10))
...
